<resources>
    <string name="app_name" translatable="false">智慧城市</string>
    <string name="search_news" translatable="false">搜索新闻</string>
    <string name="search_application" translatable="false">搜索服务</string>
    <string name="empty_data">暂无数据</string>
    <string name="main">首页</string>
    <string name="all_service">全部服务</string>
    <string name="party">智慧党建</string>
    <string name="news">新闻</string>
    <string name="personal">个人中心</string>
    <string name="theme">热门主题</string>
    <string name="comment">评论</string>
    <string name="time">时间</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_info">确认修改</string>
    <string name="personal_back">意见反馈</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_order">订单列表</string>
    <string name="exit">退出登录</string>
    <string name="header">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="phone">联系电话</string>
    <string name="identity">身份证号*</string>
    <string name="photo_album">相册选取</string>
    <string name="take_pictures">拍照</string>
    <string name="cancel">取消</string>
    <string name="determine">确定</string>
    <string name="input">请输入</string>
    <string name="order_id">订单号</string>
    <string name="order_type">订单类型</string>
    <string name="order_date">订单生成日期</string>
    <string name="order_cost">订单花费</string>
    <string name="business">商家</string>
    <string name="commodity">商品</string>
    <string name="price">价格</string>
    <string name="count">数量</string>
    <string name="submit">提交</string>
    <string name="recommend_news">新闻推荐</string>
    <string name="sign_up">报名活动</string>
    <string name="number_type">号码种类</string>
    <string name="license_plate_number">车牌号码：</string>
    <string name="engine">发动机号</string>
    <string name="inquire">查询</string>
    <string name="show_more">查看更多</string>
    <string name="violation_info">违章详情</string>
    <string name="violation_time">违法时间</string>
    <string name="violation_place">违法地点</string>
    <string name="violation_description">违法行为</string>
    <string name="punishment_info">处罚详情</string>
    <string name="violation_notification">通知书号</string>
    <string name="deductPoints">违章记分</string>
    <string name="violation_cost">罚款金额</string>
    <string name="reservation">预约挂号</string>
    <string name="create_treat">创建就诊卡片</string>
    <string name="name">姓名</string>
    <string name="birthday">出生日期</string>
    <string name="address">地址:</string>
    <string name="Details">详情</string>
    <string name="park_name">停车场名：</string>
    <string name="park_num">空位数量：</string>
    <string name="rate">收费费率：</string>
    <string name="distance">距离：</string>
    <string name="approach">进场时间：</string>
    <string name="appearance">出场时间：</string>
    <string name="charge">收费：</string>
    <string name="parent_directory">返回上级目录</string>
    <string name="next">下一步</string>
    <string name="pathName">路线名称:</string>
    <string name="cost">票价:</string>
    <string name="mileage">里程:</string>
    <string name="site">起始路线:</string>
    <string name="runTime">运行时间:</string>
    <string name="up_location">上车地点：</string>
    <string name="down_location">下车地点：</string>
    <string name="passenger_name">乘客姓名：</string>
    <string name="travel_date">乘车日期：</string>
    <string name="auto_pay">自动缴费</string>
    <string name="personal_id_manage">户号管理</string>
    <integer name="slide_time">2000</integer>
    <string-array name="sex_array">
        <item>男</item>
        <item>女</item>
    </string-array>
</resources>