<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/modify_title_layout"/>
    <TextView
        android:textSize="15sp"
        android:id="@+id/order_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/business"
            android:background="@drawable/bg_stroke"
            style="@style/my_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/commodity"
            android:background="@drawable/bg_stroke"
            style="@style/my_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/price"
            android:background="@drawable/bg_stroke"
            style="@style/my_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/count"
            android:background="@drawable/bg_stroke"
            style="@style/my_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <ListView
        android:id="@+id/order_info_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/empty_data"
        android:id="@+id/empty_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>