<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/modify_title_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/order_id"
            android:background="@drawable/bg_stroke"
            android:gravity="center"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/order_type"
            android:background="@drawable/bg_stroke"
            android:gravity="center"
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/order_date"
            android:background="@drawable/bg_stroke"
            android:gravity="center"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/order_cost"
            android:background="@drawable/bg_stroke"
            android:gravity="center"
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <ListView
        android:id="@+id/order_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>