<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@drawable/bg_stroke_blue"
    android:layout_height="wrap_content">
   <LinearLayout
       android:layout_weight="1"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/some_text"
                android:text="@string/park_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/park_name"
                style="@style/some_text"
                android:layout_weight="2.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:text="@string/park_num"
               style="@style/some_text"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
           <TextView
               android:id="@+id/park_num"
               style="@style/some_text"
               android:layout_weight="2.5"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               style="@style/some_text"
               android:text="@string/address"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
           <TextView
               android:id="@+id/park_address"
               style="@style/some_text"
               android:layout_weight="2.5"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:text="@string/rate"
               style="@style/some_text"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
           <TextView
               android:id="@+id/park_rate"
               style="@style/some_text"
               android:layout_weight="2.5"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               style="@style/some_text"
               android:text="@string/distance"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
           <TextView
               android:id="@+id/park_distance"
               style="@style/some_text"
               android:layout_weight="2.5"
               android:layout_width="0dp"
               android:layout_height="match_parent"/>
       </LinearLayout>
   </LinearLayout>
    <Button
        android:id="@+id/details"
        android:text="@string/Details"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
</LinearLayout>