<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/modify_title_layout"/>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <EditText
            android:id="@+id/name_tv"
            android:background="@drawable/bg_theme"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/sex"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <EditText
            android:id="@+id/sex_tv"
            android:background="@drawable/bg_theme"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/identity"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <EditText
            android:id="@+id/identity_tv"
            android:background="@drawable/bg_theme"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/birthday"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <EditText
            android:id="@+id/birthday_tv"
            android:background="@drawable/bg_theme"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/phone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <EditText
            android:id="@+id/phone_tv"
            android:background="@drawable/bg_theme"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/treat_name"
            android:text="@string/address"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <EditText
            android:id="@+id/address_tv"
            android:background="@drawable/bg_theme"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Button
        android:id="@+id/submit_treat"
        android:layout_margin="20dp"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/determine"
        android:background="@drawable/bg_theme_bt"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
</LinearLayout>