<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/personal_head"
            tools:ignore="NestedWeights" />
        <TextView
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:id="@+id/personal_name"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <ImageView
            android:scaleType="centerInside"
            android:src="@drawable/right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <Button
            style="@style/my_text"
            android:background="@drawable/bg_theme"
            android:id="@+id/personal_info"
            android:text="@string/personal_info"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <Button
            style="@style/my_text"
            android:layout_marginStart="20sp"
            android:background="@drawable/bg_theme"
            android:id="@+id/personal_order"
            android:text="@string/personal_order"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <Button
            style="@style/my_text"
            android:background="@drawable/bg_theme"
            android:id="@+id/personal_modify"
            android:text="@string/modify_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <Button
            style="@style/my_text"
            android:layout_marginStart="20sp"
            android:background="@drawable/bg_theme"
            android:id="@+id/personal_back"
            android:text="@string/personal_back"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView
        android:id="@+id/exit_login"
        android:textColor="#fff"
        android:layout_margin="20sp"
        android:background="@drawable/bg_theme_bt"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>