<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_stroke_blue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/license_plate_number"
            style="@style/my_text"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/record_plate"
            style="@style/some_text"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/charge"
            style="@style/my_text"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/record_charge"
            style="@style/some_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/my_text"
            android:text="@string/approach"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:gravity="center_vertical"
            android:id="@+id/approach"
            style="@style/my_text"
            android:layout_weight="4.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/my_text"
            android:text="@string/appearance"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:gravity="center_vertical"
            android:id="@+id/appearance"
            style="@style/some_text"
            android:layout_weight="4.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>