<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/modify_title_layout"/>
    <LinearLayout
        android:layout_marginBottom="20sp"
        android:background="@drawable/bg_stroke"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/number_type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/number_sp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20sp"
        android:background="@drawable/bg_stroke"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/license_plate_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/plate_sp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20sp"
        android:background="@drawable/bg_stroke"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/engine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <EditText
            android:background="@drawable/bg_stroke"
            android:id="@+id/engine_et"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:id="@+id/inquire"
        android:text="@string/inquire"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>
</LinearLayout>