<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
                <TextView
                    style="@style/my_text"
                    android:textColor="#fff"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
                <EditText
                    android:padding="5dp"
                    android:textColorHint="#fff"
                    android:layout_margin="10dp"
                    android:background="@drawable/back_edit"
                    android:id="@+id/search"
                    android:lines="1"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:hint="@string/search_news"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
        </LinearLayout>
        <ViewFlipper
            android:outAnimation="@anim/slide_out_left"
            android:inAnimation="@anim/slide_in_right"
            android:flipInterval="2000"
            android:id="@+id/flipper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <GridView
            android:id="@+id/entrance"
            android:numColumns="5"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
        <TextView
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <GridView
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:id="@+id/theme"
            android:numColumns="2"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

</LinearLayout>